fixed button position on small screens

--- a/css/styleA1.css
+++ b/css/styleA1.css
@@ -74,11 +74,18 @@ li {
   position: absolute;
   font-family: Arial, Helvetica, sans-serif;
   float: right;
-  left: 80%;
-  top: 80%;
+  right: 20%;
+  bottom: 20%;
   font-size: 1.25rem;
   background-color: darkorange;
   border-color: darkorange;
+}
+
+@media only screen and (max-width: 1000px) {
+  .button {
+    right: 10%;
+    bottom: 40%;
+  }
 }
 
 .carousel-inner {
